Pathfinder Advance Players Guide Alpha Update 1 OOC Release Notes
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@14024 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/content/outofcycledatasets/release-notes/pcgen-dataset-release-notes-5164-11-30-2010.html
+++ b/content/outofcycledatasets/release-notes/pcgen-dataset-release-notes-5164-11-30-2010.html
@@ -10,13 +10,34 @@
 
 	<body>
 
-		<h1>Release Notes for PCGen OOC Data Sets v5.16.4 (Release 1)</h1>
+		<h1>Pathfinder Advanced Players Guide<br>
+		OOC Data Set for PCGen v5.16.4<br>
+		Release Notes for Release 1</h1>
+		
+		<p>This is the first OOC update to PCGen's alpha data set for the Pathfinder Advanced Players Guide.</p>
+
+        <p>Please note that this is a patch installer. In addition to the APG update it patches (overwrites) the 
+        Pathfinder Roleplaying Game Core Rulebook dataset with the latest data fixes we've made in our ongoing effort. 
+        The installer requires 5.16.4 and will not install in earlier versions.</p>
+
+        <p>This release is an alpha release. This "alpha" status refers to the status of the data set. As an alpha 
+        data set, this  release is bound to contain errors. The PCGen team is dedicated to providing full support for 
+        the Pathfinder Roleplaying Game so we ask you, the PCGen community, to help us by putting the data set through 
+        its paces and reporting any bugs you find to the PCGen Data Team by posting your bug reports to 
+        <a href="http://games.groups.yahoo.com/group/pcgen/">PCGen@Yahoo!</a> via email to our Yahoo! Group at 
+        pcgen@yahoogroups.com. Please include the tag "[PATHFINDER]" in the subject line so the data team can quickly 
+        identify your report.</p>
+		
 
 		<h2>Table of Content</h2>
 
 		<ul>
 			<li><a href="#WhatsOOC">What are Out-of-Cycle Data Sets?</a></li>
 			<li><a href="#DataSets">Data Sets in this release</a></li>
+			<!--
+            <li><a href="#Release_History">Release History</a></li>
+			<li><a href="#Known_Issues">Known Issues</a></li>
+			-->
 			<li><a href="#Data_Installation">Installing Data Sets</a></li>
 			<li><a href="#Installation">Installing PCGen</a></li>
 			<li><a href="#WantToHelp">Want to Help?</a></li>
@@ -43,8 +64,9 @@
 		<h2><a name="DataSets">Data Sets in this release</a></h2>
 
 		<blockquote> 
-		  <p><em>Title</em>: <strong>Pathfinder Roleplaying Game Advanced Players Guide Data Set (Alpha Update 1)</strong><br>
-			<em>File</em>: <a href="">5164_pcgen_apg_alpha_update_01.pcz</a><br>
+		  <p><em>Title</em>: <strong>Pathfinder Roleplaying Game Advanced Players Guide</strong><br>
+			<em>Title</em>: <strong>Pathfinder Roleplaying Game Core Rulebook</strong><br>
+			<em>File</em>: <a href="">5164_piazo_pathfinder_alpha_update_01.pcz</a><br>
 			<em>Publisher</em>: PCGen<br>
 			<em>Game Mode</em>: Pathfinder_RPG<em><br>
 			Release Date: </em>2010-11-30</p>
@@ -53,6 +75,17 @@
 		</blockquote>
 
 		<p></p>
+	<!--
+ 	DATA-102	Calculate Staff costs automatically
+ 	DATA-151	[Pathfinder] Headband of Vast Intelligence - skill rank bonus only allows knowledge skills
+ 	DATA-153	PF Qadira and all PF Players Guides needs to allow APG as a precursor
+ 	DATA-154	Ring TYPE missing from Bonded Object eqmod PRETYPE tag
+ 	DATA-155	Simple Template, Young Creature, is incorrect
+ 	DATA-156	[Gaslight] Talents not showing up on Character Sheet
+ 	DATA-159	Loremaster missing class abilities
+ 	DATA-161	Unique keys for Sorcerer Fey bloodline reference wrong bloodline
+ 	DATA-162	Animal Tricks not granted at proper level.
+	-->
 		
 		<h2><a name="Data_Installation">Installing Data Sets</a></h2>
 		
