--- a/content/outofcycledatasets/release-notes/pcgen-dataset-release-notes-5164-11-30-2010.html
+++ b/content/outofcycledatasets/release-notes/pcgen-dataset-release-notes-5164-11-30-2010.html
@@ -34,10 +34,8 @@
 		<ul>
 			<li><a href="#WhatsOOC">What are Out-of-Cycle Data Sets?</a></li>
 			<li><a href="#DataSets">Data Sets in this release</a></li>
-			<!--
             <li><a href="#Release_History">Release History</a></li>
 			<li><a href="#Known_Issues">Known Issues</a></li>
-			-->
 			<li><a href="#Data_Installation">Installing Data Sets</a></li>
 			<li><a href="#Installation">Installing PCGen</a></li>
 			<li><a href="#WantToHelp">Want to Help?</a></li>
@@ -95,9 +93,8 @@
 <!--
         <ul>
 		  <ul>
-		    <li>Monk Flurry has incorrect attack bonus on iterative attacks after level 8. For example, an 8th livel 
-		      monk should have a fluffy attack bonus of +6/+6/+1/+1, PCGen will, however, display +6/+6/+6/+1.</li>
-		    <li>Spells from opposing arcane schools do not use two slots of the appropriate spell level.</li>
+		    <li>Clean up and implement bonus/effects throughout data set.</li>
+		    <li>Implement full Soothsayers Raiment and Ring of Revelations.</li>
 	      </ul>
     	</ul>
 -->
