Updating the Release Notes Issue#: NEWSOURCE-63
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@14129 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/content/outofcycledatasets/release-notes/pcgen-dataset-release-notes-5164-ultimate_magic_playtest_round_3.html
+++ b/content/outofcycledatasets/release-notes/pcgen-dataset-release-notes-5164-ultimate_magic_playtest_round_3.html
@@ -14,9 +14,10 @@
 		OOC Data Set for PCGen v5.16.4<br>
 		Release Notes</h1>
 		
-		<p>This is the second, based upon Paizo's third round of playtest, for PCGen's Pathfinder Ultimate Magic Playtest.</p>
+		<p>This is PCGen's second data set for PCGen's Pathfinder Ultimate Magic Playtest, being based upon Paizo's third round of playtesting.</p>
 
-        <p>Please note that this is a patch installer. The installer requires 5.16.4 and will not install in earlier versions.</p>
+        <p>Please note that this data set requires that the Pathfinder Advanced Players Guide be loaded, along with the Core Rulebook. 
+        	The installer requires 5.16.4 and will not install in earlier versions.</p>
 
         <p>This release is a beta release. This "beta" status refers to the status of the data set. As an beta 
         data set, this  release is bound to contain errors. The PCGen team is dedicated to providing full support for 
