UPdate OOC release notes
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@14323 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
+++ b/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
@@ -77,6 +77,7 @@
 		<blockquote>
 		  <p><strong>Release 2: January 6, 2011</strong></p>
 		  <ul>
+		    <li><a href="http://jira.pcgen.org/browse/DATA-154">DATA-154</a> Ring TYPE missing from Bonded Object eqmod PRETYPE tag</li>
 		    <li><a href="http://jira.pcgen.org/browse/DATA-166">DATA-166</a> Crocidile abilities in both the Bestiary and the Core set</li>
  		    <li><a href="http://jira.pcgen.org/browse/DATA-170">DATA-170</a> Inquisitor TYPO in Spell</li>
  		    <li><a href="http://jira.pcgen.org/browse/DATA-171">DATA-171</a> Oracle Channeling not recognized by Selective Channeling feat</li>
