--- a/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
+++ b/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
@@ -64,7 +64,7 @@
 		<blockquote> 
 		  <p><em>Title</em>: <strong>Pathfinder Roleplaying Game Advanced Players Guide</strong><br>
 			<em>Title</em>: <strong>Pathfinder Roleplaying Game Core Rulebook</strong><br>
-			<em>File</em>: <a href="">5164_piazo_pathfinder_alpha_update_02.pcz</a><br>
+			<em>File</em>: <a href="http://sourceforge.net/projects/pcgen/files/PCGen%20Stable%20Datasets/5.16.4%20OOC%20Data%20Sets/5164_piazo_pathfinder_alpha_update_02.pcz/download">5164_piazo_pathfinder_alpha_update_02.pcz</a><br>
 			<em>Publisher</em>: PCGen<br>
 			<em>Game Mode</em>: Pathfinder_RPG<em><br>
 			Release Date: </em>2011-01-06</p>
