--- a/pcgen/preview/d20/fantasy/Standard.htm
+++ b/pcgen/preview/d20/fantasy/Standard.htm
@@ -1691,6 +1691,82 @@ Immune
 
 <!-- Stop Turning Table -->
 
+<!-- Start Channeling Table -->
+|FOR,%channelingcount,0,count("ABILITIES","CATEGORY=Special Ability","TYPE=ChannelingBase"),1,0|
+|IIF(ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.HASASPECT.ChannelingType:Y)|
+   <table width="100%" cellspacing="0" cellpadding="3" summary="Channeling Table">
+     <tr>
+      <td bgcolor="black" align="center" colspan="4" class="ab"><b>|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingType| |ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingKind|</b></td>
+     </tr>
+     <tr >
+      <td rowspan="2" width="25%" bgcolor="black" align="center" class="ablable">CHANNELING CHECK<br />RESULT</td>
+      <td rowspan="2" width="25%" bgcolor="black" align="center" class="ablable">AFFECTED<br />(MAX HIT DICE)</td>
+      <td width="25%" bgcolor="black" align="right" class="ablable">CHANNELING LEVEL</td>
+      <td width="25%" class="border9" align="center"><b>|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingLevel.INTVAL|</b></td>
+     </tr>
+     <tr>
+      <td bgcolor="black" align="right" class="ablable">MAGNITUDE</td>
+      <td class="border9" align="center"><b>|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingMagnitude|</b></td>
+     </tr>
+     <tr>
+      <td align="center" class="font8"><b>Up to 0</b></td>
+      <td align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)-8).INTVAL|</b></td>
+      <td bgcolor="black" align="right" class="ablable">CHANNELING CHECK</td>
+      <td class="border9" align="center"><b>1d20|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingCheck.INTVAL.SIGN.NOZERO|</b></td>
+     </tr>
+     <tr>
+      <td bgcolor="gray" align="center" class="font8"><b>1 - 3</b></td>
+      <td bgcolor="gray" align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)-7).INTVAL|</b></td>
+      <td bgcolor="black" align="right" class="ablable">TURNS/DAY</td>
+      <td class="border9" align="center"><b>|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingUses.INTVAL|</b></td>
+     </tr>
+     <tr>
+      <td align="center" class="font8"><b>4 - 6</b></td>
+      <td align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)-6).INTVAL|</b></td>
+		<td bgcolor="black" align="right" class="ablable">RANGE</td>
+		<td class="border9" align="center"><b>|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingRange|</b></td>
+     </tr>
+     <tr>
+      <td bgcolor="gray" align="center" class="font8"><b>7 - 9</b></td>
+      <td bgcolor="gray" align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)-5).INTVAL|</b></td>
+      <td bgcolor="black" align="right" class="ablable">USES</td>
+      <td colspan="2" class="border" align="center"><font style="font-size: 9pt">|FOR.0,ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingUses.INTVAL,5,&#9744;, , ,1|</font></td>
+     </tr>
+     <tr>
+      <td align="center" class="font8"><b>10 - 12</b></td>
+      <td align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)-4).INTVAL|</b></td>
+	        <td colspan="2" rowspan="6" class="border8" valign="top">|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingNotes|
+     </tr>
+     <tr>
+      <td bgcolor="gray" align="center" class="font8"><b>13 - 15</b></td>
+      <td bgcolor="gray" align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)-3).INTVAL|</b></td>
+     </tr>
+     <tr>
+      <td align="center" class="font8"><b>16 - 18</b></td>
+      <td align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)-2).INTVAL|</b></td>
+     </tr>
+     <tr>
+      <td bgcolor="gray" align="center" class="font8"><b>19 - 21</b></td>
+      <td bgcolor="gray" align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)-1).INTVAL|</b></td>
+     </tr>
+     <tr>
+      <td align="center" class="font8"><b>22+</b></td>
+      <td align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)+0).INTVAL|</b></td>
+     </tr>
+     <tr>
+      <td bgcolor="gray" align="center" class="font8"><b>26+</b></td>
+      <td bgcolor="gray" align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)+1).INTVAL|</b></td>
+     </tr>
+    </table>
+<font style="font-size:2pt"><br /></font>
+
+|ENDIF|
+|ENDFOR|
+
+
+<!-- Stop Channeling Table -->
+
+
 <!-- Start Overflow Weapons table -->
 |FOR,%weap,3,COUNT[EQTYPE.Weapon]-1,1,1|
    <table cellpadding="0" width="100%" cellspacing="0" border="0" summary="Weapon Overflow">
