Notes for the APG Update, Release 4 Issue#: NEWSOURCE-32
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@14645 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
+++ b/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" >
-		<title>Release Notes for PCGen OOC Data Sets v5.16.4 Release 3</title>
+		<title>Release Notes for PCGen OOC Data Sets v5.16.4</title>
 		<link rel="stylesheet" type="text/css" href="http://sourceforge.net/cssdef.php">
 	</head>
 
@@ -12,10 +12,10 @@
 
 		<h1>Pathfinder Advanced Players Guide<br>
 		OOC Data Set for PCGen v5.16.4<br>
-		Release Notes for Release 3</h1>
+		Release Notes for Release 4</h1>
 		
-		<p>This is the third OOC update to PCGen's alpha data set for the Pathfinder Advanced Players Guide. It can be 
-		installed on top of updates 1 and 2 but doesn't require them.</p>
+		<p>This is the fourth OOC update to PCGen's alpha data set for the Pathfinder Advanced Players Guide. It can be 
+		installed on top of updates 1, 2 and 3 but doesn't require them.</p>
 
         <p>Please note that this is a patch installer. In addition to the APG update it patches (overwrites) the 
         Pathfinder Roleplaying Game Core Rulebook and Bestiary datasets with the latest data fixes we've made in our ongoing effort. 
@@ -66,7 +66,7 @@
 		  <p><em>Title</em>: <strong>Pathfinder Roleplaying Game Advanced Players Guide</strong><br>
 			<em>Title</em>: <strong>Pathfinder Roleplaying Game Core Rulebook</strong><br>
 			<em>Title</em>: <strong>Pathfinder Roleplaying Game Bestiary</strong><br>
-			<em>File</em>: <a href="http://sourceforge.net/projects/pcgen/files/PCGen%20Stable%20Datasets/5.16.4%20OOC%20Data%20Sets/5164_piazo_pathfinder_alpha_update_03.pcz/download">5164_piazo_pathfinder_alpha_update_03.pcz</a><br>
+			<em>File</em>: <a href="http://sourceforge.net/projects/pcgen/files/PCGen%20Stable%20Datasets/5.16.4%20OOC%20Data%20Sets/5164_piazo_pathfinder_alpha_update_04.pcz/download">5164_piazo_pathfinder_alpha_update_04.pcz</a><br>
 			<em>Publisher</em>: PCGen<br>
 			<em>Game Mode</em>: Pathfinder_RPG<em><br>
 			Release Date: </em>2011-01-30</p>
@@ -76,6 +76,22 @@
 
 		<p></p>
 		<h2><a name="Release_History">Release History</a></h2>
+		<blockquote>
+		  <p><strong>Release 4: February 26, 2011</strong></p>
+		  <p>This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
+		  	improvements have been made as part of trackers that are still open.</p>
+		  <ul>
+ 		    <li><a href="http://jira.pcgen.org/browse/DATA-227">DATA-227</a> [PFCR] Telekinetic Fist DESC has wrong PRExxx</li>
+		    <li><a href="http://jira.pcgen.org/browse/DATA-228">DATA-228</a> Vampire Spawn missing Cold and Electircal Resistance Special Abilities</li>
+		    <li><a href="http://jira.pcgen.org/browse/DATA-230">DATA-230</a> Alchemical Silver damage penalty inappropriately applied to bludgeoning weapons</li>
+		    <li><a href="http://jira.pcgen.org/browse/DATA-232">DATA-232</a> Boots of striding & springing should give bonus only to Acrobatics (jump)</li>
+		    <li><a href="http://jira.pcgen.org/browse/DATA-233">DATA-233</a> PFAPG: Ironhide feat not implemented</li>
+		    <li><a href="http://jira.pcgen.org/browse/DATA-234">DATA-234</a> PFAPG: Crossbow mastery prereqs wrong</li>
+		    <li><a href="http://jira.pcgen.org/browse/DATA-235">DATA-235</a> [Pathfinder] Circlet of Persuasion skill bonus problems</li>
+		    <li><a href="http://jira.pcgen.org/browse/DATA-236">DATA-236</a> [APG] Incorrect Pricing on Equipment Modifiers</li>
+		  </ul>
+		</blockquote>
+
 		<blockquote>
 		  <p><strong>Release 3: January 30, 2011</strong></p>
 		  <p>This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
