Support for Eclipse Channeling. Plus gaslight
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@14686 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/pcgen/preview/d20/gaslight/gaslight_statblock.htm
+++ b/pcgen/preview/d20/gaslight/gaslight_statblock.htm
@@ -354,6 +354,15 @@ at will)
 <br>
 |ENDIF|
 
+|IIF(count("ABILITIES";"CATEGORY=Talent";"TYPE=Talent";"VISIBILITY=HIDDEN[or]VISIBILITY=DISPLAY_ONLY")>0)|
+<b>Talents</b> 
+|FOR,%talent,0,count("ABILITIES","CATEGORY=Talent","TYPE=Talent","VISIBILITY=HIDDEN[or]VISIBILITY=DISPLAY_ONLY")-1,1,0| 
+|ABILITYALL.Talent.VISIBLE.%talent.TYPE=Talent|, 
+|ENDFOR|
+<br>
+|ENDIF|
+
+
 <b>Energy Points </b> |VAR.EnergyPoints.INTVAL|<br>
 
 <b>Talents </b> |ABILITYALLLIST.Talent|<br>
