--- a/pcgen/preview/d20/fantasy/Standard.htm
+++ b/pcgen/preview/d20/fantasy/Standard.htm
@@ -1706,7 +1706,18 @@ Immune
      </tr>
      <tr>
       <td bgcolor="black" align="right" class="ablable">MAGNITUDE</td>
-      <td class="border9" align="center"><b>|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingMagnitude|</b></td>
+
+	  <td class="border9" align="center"><b>|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingMagnitude|
+|IIF(VAR.ChannelNegativeMagnitudeNormal.EQ.0)| + 
+|ENDIF|
+|IIF(VAR.ChannelPositiveMagnitudeNormal.EQ.0)| + 
+|ENDIF|
+|IIF(VAR.ChannelPositiveMagnitudeNormal.GTEQ.1)| x 
+|ENDIF|
+|IIF(VAR.ChannelNegativeMagnitudeNormal.GTEQ.1)| x 
+|ENDIF|
+|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingMagnitudeBonus|
+	</b></td>
      </tr>
      <tr>
       <td align="center" class="font8"><b>Up to 0</b></td>
@@ -1717,14 +1728,14 @@ Immune
      <tr>
       <td bgcolor="gray" align="center" class="font8"><b>1 - 3</b></td>
       <td bgcolor="gray" align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)-7).INTVAL|</b></td>
-      <td bgcolor="black" align="right" class="ablable">TURNS/DAY</td>
-      <td class="border9" align="center"><b>|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingUses.INTVAL|</b></td>
+		<td bgcolor="black" align="right" class="ablable">RANGE</td>
+		<td class="border9" align="center"><b>|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingRange| (ft.)</b></td>
      </tr>
      <tr>
       <td align="center" class="font8"><b>4 - 6</b></td>
       <td align="center" class="font8"><b>|((ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingIntensity)-6).INTVAL|</b></td>
-		<td bgcolor="black" align="right" class="ablable">RANGE</td>
-		<td class="border9" align="center"><b>|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingRange|</b></td>
+      <td bgcolor="black" align="right" class="ablable">TURNS/DAY</td>
+      <td class="border9" align="center"><b>|ABILITYALL.Special Ability.%channelingcount.TYPE=ChannelingBase.ASPECT.ChannelingUses.INTVAL|</b></td>
      </tr>
      <tr>
       <td bgcolor="gray" align="center" class="font8"><b>7 - 9</b></td>
