Update release notes for APG Update 5. Issue#: NEWSOURCE-32
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@14727 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
+++ b/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
@@ -12,14 +12,15 @@
 
 		<h1>Pathfinder Advanced Players Guide<br>
 		OOC Data Set for PCGen v5.16.4<br>
-		Release Notes for Release 4</h1>
+		Release Notes for Release 5</h1>
 		
 		<p>This is the fourth OOC update to PCGen's alpha data set for the Pathfinder Advanced Players Guide. It can be 
-		installed on top of updates 1, 2 and 3 but doesn't require them.</p>
+		installed on top of all previous updates but doesn't require them.</p>
 
         <p>Please note that this is a patch installer. In addition to the APG update it patches (overwrites) the 
         Pathfinder Roleplaying Game Core Rulebook and Bestiary datasets with the latest data fixes we've made in our ongoing effort. 
-        The installer requires 5.16.4 and will not install in earlier versions.</p>
+        Additionally, the latest Output Sheets, incorporating features supporting the Pathfinder data sets are included. The 
+        installer requires 5.16.4 and will not install in earlier versions.</p>
 
         <p>This release is an alpha release. This "alpha" status refers to the status of the data set. As an alpha 
         data set, this  release is bound to contain errors. The PCGen team is dedicated to providing full support for 
@@ -66,16 +67,25 @@
 		  <p><em>Title</em>: <strong>Pathfinder Roleplaying Game Advanced Players Guide</strong><br>
 			<em>Title</em>: <strong>Pathfinder Roleplaying Game Core Rulebook</strong><br>
 			<em>Title</em>: <strong>Pathfinder Roleplaying Game Bestiary</strong><br>
-			<em>File</em>: <a href="http://sourceforge.net/projects/pcgen/files/PCGen%20Stable%20Datasets/5.16.4%20OOC%20Data%20Sets/5164_piazo_pathfinder_alpha_update_04.pcz/download">5164_piazo_pathfinder_alpha_update_04.pcz</a><br>
+			<em>File</em>: <a href="http://sourceforge.net/projects/pcgen/files/PCGen%20Stable%20Datasets/5.16.4%20OOC%20Data%20Sets/5164_piazo_pathfinder_alpha_update_05.pcz/download">5164_piazo_pathfinder_alpha_update_05.pcz</a><br>
 			<em>Publisher</em>: PCGen<br>
 			<em>Game Mode</em>: Pathfinder_RPG<em><br>
-			Release Date: </em>2011-01-30</p>
+			Release Date: </em>2011-03-20</p>
 			
 		  <p>* Note: The Pathfinder Advanced Players Guide Alpha Update Data Set is exactly that, an alpha data set, and as such will contain errors and exclusions. </p>
 		</blockquote>
 
 		<p></p>
 		<h2><a name="Release_History">Release History</a></h2>
+		<blockquote>
+		  <p><strong>Release 5: March 18, 2011</strong></p>
+		  <p>This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
+		  	improvements have been made as part of trackers that are still open.</p>
+		  <ul>
+ 		    <li><a href="http://jira.pcgen.org/browse/DATA-TBD">DATA-TBD</a> TBD</li>
+		  </ul>
+		</blockquote>
+
 		<blockquote>
 		  <p><strong>Release 4: February 26, 2011</strong></p>
 		  <p>This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
