Preparing Update 6 for the OOC Data Set for Paizo's APG Issue#: NEWSOURCE-32
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@15082 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
+++ b/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
@@ -12,9 +12,9 @@
 
 		<h1>Pathfinder Advanced Players Guide<br>
 		OOC Data Set for PCGen v5.16.4<br>
-		Release Notes for Release 5</h1>
+		Release Notes for Release 6</h1>
 		
-		<p>This is the fourth OOC update to PCGen's alpha data set for the Pathfinder Advanced Players Guide. It can be 
+		<p>This is the fifth OOC update to PCGen's alpha data set for the Pathfinder Advanced Players Guide. It can be 
 		installed on top of all previous updates but doesn't require them.</p>
 
         <p>Please note that this is a patch installer. In addition to the APG update it patches (overwrites) the 
@@ -67,10 +67,10 @@
 		  <p><em>Title</em>: <strong>Pathfinder Roleplaying Game Advanced Players Guide</strong><br>
 			<em>Title</em>: <strong>Pathfinder Roleplaying Game Core Rulebook</strong><br>
 			<em>Title</em>: <strong>Pathfinder Roleplaying Game Bestiary</strong><br>
-			<em>File</em>: <a href="http://sourceforge.net/projects/pcgen/files/PCGen%20Stable%20Datasets/5.16.4%20OOC%20Data%20Sets/5164_piazo_pathfinder_alpha_update_05.pcz/download">5164_piazo_pathfinder_alpha_update_05.pcz</a><br>
+			<em>File</em>: <a href="http://sourceforge.net/projects/pcgen/files/PCGen%20Stable%20Datasets/5.16.4%20OOC%20Data%20Sets/5164_piazo_pathfinder_alpha_update_05.pcz/download">5164_paizo_pathfinder_alpha_update_05.pcz</a><br>
 			<em>Publisher</em>: PCGen<br>
 			<em>Game Mode</em>: Pathfinder_RPG<em><br>
-			Release Date: </em>2011-03-20</p>
+			Release Date: </em>2011-04-22</p>
 			
 		  <p>* Note: The Pathfinder Advanced Players Guide Alpha Update Data Set is exactly that, an alpha data set, and as such will contain errors and exclusions. </p>
 		</blockquote>
@@ -78,12 +78,24 @@
 		<p></p>
 		<h2><a name="Release_History">Release History</a></h2>
 		<blockquote>
-		  <p><strong>Release 5: March 18, 2011</strong></p>
+		  <p><strong>Release 5: April 22, 2011</strong></p>
 		  <p>This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
 		  	improvements have been made as part of trackers that are still open.</p>
-		  <ul>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-TBD">DATA-TBD</a> TBD</li>
-		  </ul>
+
+		<ul>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-15'>DATA-15</a>] Specialist Wizard Weirdness</li>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-73'>DATA-73</a>] Monk Flurry of Blows in Pathfinder</li>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-226'>DATA-226</a>] Draconic Bloodline missing Skill Focus (Fly) as a bonus feat</li>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-229'>DATA-229</a>] Zen Archer - Way of the Bow</li>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-239'>DATA-239</a>] SEVERE Unconstructed Reference: Race Crocodile (Giant)</li>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-240'>DATA-240</a>] All Simple Templates which adjust size are incorrect</li>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-245'>DATA-245</a>] [PFCR] Missing weapon Net</li>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-246'>DATA-246</a>] PF Bard Favored Class Feature Bonus Spell Only Works Once</li>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-247'>DATA-247</a>] Grig incorrectly has 'cold' ability</li>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-265'>DATA-265</a>] Oracle Weapon Mastery CATEGORY issue</li>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-267'>DATA-267</a>] [PF] Staff Creation Cost</li>
+			<li>[<a href='http://jira.pcgen.org/browse/DATA-269'>DATA-269</a>] Tangle Bolt has incorrect Cost 166.1 vs. 226 listed</li>
+</ul>
 		</blockquote>
 
 		<blockquote>
@@ -91,14 +103,14 @@
 		  <p>This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
 		  	improvements have been made as part of trackers that are still open.</p>
 		  <ul>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-227">DATA-227</a> [PFCR] Telekinetic Fist DESC has wrong PRExxx</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-228">DATA-228</a> Vampire Spawn missing Cold and Electircal Resistance Special Abilities</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-230">DATA-230</a> Alchemical Silver damage penalty inappropriately applied to bludgeoning weapons</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-232">DATA-232</a> Boots of striding & springing should give bonus only to Acrobatics (jump)</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-233">DATA-233</a> PFAPG: Ironhide feat not implemented</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-234">DATA-234</a> PFAPG: Crossbow mastery prereqs wrong</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-235">DATA-235</a> [Pathfinder] Circlet of Persuasion skill bonus problems</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-236">DATA-236</a> [APG] Incorrect Pricing on Equipment Modifiers</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-227">DATA-227</a>] [PFCR] Telekinetic Fist DESC has wrong PRExxx</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-228">DATA-228</a>] Vampire Spawn missing Cold and Electircal Resistance Special Abilities</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-230">DATA-230</a>] Alchemical Silver damage penalty inappropriately applied to bludgeoning weapons</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-232">DATA-232</a>] Boots of striding & springing should give bonus only to Acrobatics (jump)</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-233">DATA-233</a>] PFAPG: Ironhide feat not implemented</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-234">DATA-234</a>] PFAPG: Crossbow mastery prereqs wrong</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-235">DATA-235</a>] [Pathfinder] Circlet of Persuasion skill bonus problems</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-236">DATA-236</a>] [APG] Incorrect Pricing on Equipment Modifiers</li>
 		  </ul>
 		</blockquote>
 
@@ -107,34 +119,34 @@
 		  <p>This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
 		  	improvements have been made as part of trackers that are still open.</p>
 		  <ul>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-154">DATA-154</a> Ring TYPE missing from Bonded Object eqmod PRETYPE tag</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-192">DATA-192</a> PFAPG Traits BENEFITs</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-208">DATA-208</a> Aasimar getting extra skill bonuses</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-212">DATA-212</a> Special Abilities should be limited to Racial HD - i.e. gaze attack</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-214">DATA-214</a> Calculation error with Deadly Aim feat</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-219">DATA-219</a> Pathfinder APG - Missing Ranger selection for Point Blank Master</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-220">DATA-220</a> Yeti Gaze Attack is using CON instead of CHA</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-154">DATA-154</a>] Ring TYPE missing from Bonded Object eqmod PRETYPE tag</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-192">DATA-192</a>] PFAPG Traits BENEFITs</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-208">DATA-208</a>] Aasimar getting extra skill bonuses</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-212">DATA-212</a>] Special Abilities should be limited to Racial HD - i.e. gaze attack</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-214">DATA-214</a>] Calculation error with Deadly Aim feat</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-219">DATA-219</a>] Pathfinder APG - Missing Ranger selection for Point Blank Master</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-220">DATA-220</a>] Yeti Gaze Attack is using CON instead of CHA</li>
 		  </ul>
 		</blockquote>
 
 		<blockquote>
 		  <p><strong>Release 2: January 6, 2011</strong></p>
 		  <ul>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-154">DATA-154</a> Ring TYPE missing from Bonded Object eqmod PRETYPE tag</li>
-		    <li><a href="http://jira.pcgen.org/browse/DATA-166">DATA-166</a> Crocidile abilities in both the Bestiary and the Core set</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-170">DATA-170</a> Inquisitor TYPO in Spell</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-171">DATA-171</a> Oracle Channeling not recognized by Selective Channeling feat</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-180">DATA-180</a> Duelist Skills Pre-Reqs incorrect</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-184">DATA-184</a> Sickened conditioned not properly applying -2 to damage</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-185">DATA-185</a> Rogue Advanced Players Guide Swashbuckler Archetype's 2nd Combat Trick</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-186">DATA-186</a> These need to be cleaned up in Pathfinder Sets</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-191">DATA-191</a> PFCR Feats should use calculated BENEFITs where possible</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-195">DATA-195</a> Incorrect strength for Monkey familiar</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-198">DATA-198</a> PFAPG: Add calculations to Inquisitor class features</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-199">DATA-199</a> PFCR: Acrobatics (Jump) modifier with speed incorrect</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-200">DATA-200</a> PFAPG: Witch abilities: Concentration Check not in PFAPG, missing Deliver Touch Spells</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-203">DATA-203</a> PFAPG: Conditional skills for Inquisitor Monster Lore</li>
- 		    <li><a href="http://jira.pcgen.org/browse/DATA-204">DATA-204</a> .REPLACE on Natural Armor instead of .STACK</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-154">DATA-154</a>] Ring TYPE missing from Bonded Object eqmod PRETYPE tag</li>
+		    <li>[<a href="http://jira.pcgen.org/browse/DATA-166">DATA-166</a>] Crocidile abilities in both the Bestiary and the Core set</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-170">DATA-170</a>] Inquisitor TYPO in Spell</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-171">DATA-171</a>] Oracle Channeling not recognized by Selective Channeling feat</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-180">DATA-180</a>] Duelist Skills Pre-Reqs incorrect</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-184">DATA-184</a>] Sickened conditioned not properly applying -2 to damage</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-185">DATA-185</a>] Rogue Advanced Players Guide Swashbuckler Archetype's 2nd Combat Trick</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-186">DATA-186</a>] These need to be cleaned up in Pathfinder Sets</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-191">DATA-191</a>] PFCR Feats should use calculated BENEFITs where possible</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-195">DATA-195</a>] Incorrect strength for Monkey familiar</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-198">DATA-198</a>] PFAPG: Add calculations to Inquisitor class features</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-199">DATA-199</a>] PFCR: Acrobatics (Jump) modifier with speed incorrect</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-200">DATA-200</a>] PFAPG: Witch abilities: Concentration Check not in PFAPG, missing Deliver Touch Spells</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-203">DATA-203</a>] PFAPG: Conditional skills for Inquisitor Monster Lore</li>
+ 		    <li>[<a href="http://jira.pcgen.org/browse/DATA-204">DATA-204</a>] .REPLACE on Natural Armor instead of .STACK</li>
 		  </ul>
 		  <p>Note: This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
 		  	improvements have been made as part of other, yet open trackers.</p>
